--- a/01-foundation/src/pages/index.astro
+++ b/01-foundation/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
+// code fence --> component script --> Server only
 
+const name = "John Doe";
+const title = "Home";
 ---
 
 <html lang="en">
@@ -8,9 +11,28 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{title}</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>{name}</h1>
+
+    <p>Static Now date: {new Date().toLocaleTimeString()}</p>
+    <p id="scriptdate"></p>
+
+    <footer>2020</footer>
+
+    <script>
+      const currentYear: number = new Date().getFullYear();
+      const currentTime: string = new Date().toLocaleTimeString();
+
+      const dateParagraph = document.querySelector(
+        "#scriptdate"
+      ) as HTMLParagraphElement;
+      if (dateParagraph)
+        dateParagraph.innerText = `Script Now date: ${currentTime}`;
+
+      const footer = document.querySelector("footer") as HTMLElement;
+      if (footer) footer.innerText = `Current year: ${currentYear}`;
+    </script>
   </body>
 </html>
