--- a/01-foundation/src/pages/about.astro
+++ b/01-foundation/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-
+import NavBar from "../components/NavBar.astro";
 ---
 
 <html lang="en">
@@ -11,6 +11,7 @@
     <title>Astro</title>
   </head>
   <body>
+    <NavBar />
     <h1>About</h1>
   </body>
 </html>
