--- a/01-foundation/src/pages/index.astro
+++ b/01-foundation/src/pages/index.astro
@@ -21,4 +21,65 @@ const name = "John Doe";
     if (dateParagraph)
       dateParagraph.innerText = `Script Now date: ${currentTime}`;
   </script>
+
+  <!-- <form id="contactForm">
+    <label class="flex flex-col gap-2 mb-4" for="email">
+      Your e-mail
+      <input
+        class="py-2 px-4 bg-white border-secondary border-2 rounded-lg"
+        id="email"
+        type="email"
+        name="email"
+        placeholder="info@example.com"
+        required
+      />
+    </label>
+    <label class="flex flex-col gap-2" for="message">
+      Your message
+      <textarea
+        class="py-2 px-4 bg-white border-secondary border-2 rounded-lg"
+        rows={3}
+        id="message"
+        name="message"
+        placeholder="Hey, I would like to get in touch with you"
+        required></textarea>
+    </label>
+
+    <button
+      class="px-8 mt-4 py-4 bg-secondary text-white rounded-lg lg:hover:scale-[1.04] transition-transform disabled:opacity-50"
+      type="submit"
+      id="submitBtn"
+    >
+      Submit
+    </button>
+    <div id="missingData" class="text-red-500 font-bold hidden">
+      Something went from while processing the contact form. Try again later.
+    </div>
+    <div id="error" class="text-red-500 font-bold hidden">
+      Something went from while processing the contact form. Try again later.
+    </div>
+  </form> -->
 </MainLayout>
+
+<script>
+  import { trpcAstro } from "../client";
+
+  const greeting = await trpcAstro.getHello.query("foo");
+  console.log(greeting);
+
+  const posts = await trpcAstro.getPosts.query();
+  console.log(posts);
+
+  /* const form = document.getElementById("contactForm") as HTMLFormElement | null;
+  form?.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const formData = new FormData(form);
+    const result = await trpcAstro.sendContactForm.mutate({
+      message: formData.get("message") as string | null,
+      email: formData.get("email") as string | null,
+    });
+    if (result.status === "success") {
+      window.location.href = "/contact/thanks";
+    }
+  }); */
+</script>
