--- a/01-foundation/src/layouts/MainLayout.astro
+++ b/01-foundation/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/NavBar.astro";
+import PostSection from "../components/PostSection.astro";
 import "../styles/global.css";
 
 interface Props {
@@ -23,5 +24,6 @@ const { title } = Astro.props;
   <body>
     <NavBar />
     <slot />
+    <PostSection />
   </body>
 </html>
