--- a/01-foundation/src/layouts/MainLayout.astro
+++ b/01-foundation/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import NavBar from "../components/NavBar.astro";
-import PostSection from "../components/PostSection.astro";
+import PostSection from "../components/Post/PostSection.astro";
 import "../styles/global.css";
 
 interface Props {
