feat(01-foundation): Create astro page Post

--- a/01-foundation/src/components/NavBar.astro
+++ b/01-foundation/src/components/NavBar.astro
@@ -5,6 +5,7 @@ const title = "Navigation";
 <h3>{title}</h3>
 <nav>
   <a href="/">Home</a>
+  <a href="/post">Post</a>
   <a href="/about">About</a>
   <a href="/contact">Contact</a>
 </nav>
