--- a/01-foundation/src/components/Post/PostSection.astro
+++ b/01-foundation/src/components/Post/PostSection.astro
@@ -10,6 +10,7 @@ const posts = await trpcAstro.post.getAll.query();
 <h3>{title}</h3>
 
 <button id="btn-create">Create</button>
+
 <div id="post-section">
   {
     posts.map(({ _id, title, description }) => (
@@ -17,13 +18,14 @@ const posts = await trpcAstro.post.getAll.query();
         <div class="top">
           <img src="https://images.unsplash.com/photo-1679155506707-a072b305dd91?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" />
           <div class="top-text">
-            <span>{_id}</span>
+            <span>
+              <small>{_id}</small>
+            </span>
             <p class="name">{title}</p>
             <p class="details">{description}</p>
           </div>
+          <ButtonDelete id={_id} />
         </div>
-
-        <ButtonDelete id={_id} />
       </div>
     ))
   }
@@ -52,6 +54,7 @@ const posts = await trpcAstro.post.getAll.query();
 
   .top {
     display: flex;
+    justify-content: space-between;
   }
 
   img {
