--- a/01-foundation/src/components/Post/PostSection.astro
+++ b/01-foundation/src/components/Post/PostSection.astro
@@ -1,6 +1,7 @@
 ---
 import { trpcAstro } from "../../client";
 import ButtonDelete from "./ButtonDelete.astro";
+import CreateForm from "./CreateForm.astro";
 
 const title = "Post Section";
 
@@ -9,11 +10,13 @@ const posts = await trpcAstro.post.getAll.query();
 
 <h3>{title}</h3>
 
-<button id="btn-create">Create</button>
+<h4>Creation</h4>
 
+<CreateForm />
+<h4>List</h4>
 <div id="post-section">
   {
-    posts.map(({ _id, title, description }) => (
+    posts.map(({ _id, title, author, description }) => (
       <div id={_id} class="container">
         <div class="top">
           <img src="https://images.unsplash.com/photo-1679155506707-a072b305dd91?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" />
@@ -21,8 +24,11 @@ const posts = await trpcAstro.post.getAll.query();
             <span>
               <small>{_id}</small>
             </span>
-            <p class="name">{title}</p>
-            <p class="details">{description}</p>
+            <p class="title">{title}</p>
+            <span>
+              <small>{author}</small>
+            </span>
+            <p>{description}</p>
           </div>
           <ButtonDelete id={_id} />
         </div>
@@ -42,7 +48,7 @@ const posts = await trpcAstro.post.getAll.query();
     flex-direction: column;
     padding: 10px;
     box-shadow: 2px 2px 20px 3px gray;
-    width: 420px;
+    width: 450px;
     border-radius: 5px;
     transition: 500ms ease;
     margin: 2em;
@@ -64,7 +70,7 @@ const posts = await trpcAstro.post.getAll.query();
     margin-right: 10px;
   }
 
-  .name {
+  .title {
     font-weight: 600;
   }
   span {
@@ -136,15 +142,4 @@ const posts = await trpcAstro.post.getAll.query();
 
   const posts = await trpcAstro.post.getAll.query();
   console.log(posts);
-
-  const createBtn = document.querySelector("#btn-create");
-  createBtn?.addEventListener("click", async () => {
-    await trpcAstro.post.create.mutate({
-      title: "Example",
-      author: "Jonh Doe",
-      description: "Description",
-      published: true,
-    });
-    window.location.reload();
-  });
 </script>
