--- a/01-foundation/src/pages/post.astro
+++ b/01-foundation/src/pages/post.astro
@@ -1,8 +1,19 @@
 ---
 import PostSection from "../components/Post/PostSection.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+
+export const prerender = true;
+
+const response = await fetch("https://api.chucknorris.io/jokes/random", {
+  method: "GET",
+}).then((r) => r.json());
+const { value } = response;
 ---
 
 <MainLayout title="Post Page">
+  <div>
+    <h2>Chuck Norris sentence</h2>
+    <p>{value}</p>
+  </div>
   <PostSection />
 </MainLayout>
