feat(01-foundation-astro-client): Remove trpc unnecessary files

--- a/01-foundation/astro/src/pages/post.astro
+++ b/01-foundation/astro/src/pages/post.astro
@@ -15,5 +15,5 @@ const { value } = response;
     <h2>Chuck Norris sentence</h2>
     <p>{value}</p>
   </div>
-  <PostSection />
+  <!-- <PostSection /> -->
 </MainLayout>
