--- a/01-foundation/astro/src/pages/post.astro
+++ b/01-foundation/astro/src/pages/post.astro
@@ -8,6 +8,14 @@ const response = await fetch("https://api.chucknorris.io/jokes/random", {
   method: "GET",
 }).then((r) => r.json());
 const { value } = response;
+
+/* const posts = await fetch(
+  "https://astro-project-trpc-l5axd9i2b-rubru94s-projects.vercel.app/api/trpc/post.getAll",
+  {
+    method: "GET",
+  }
+).then((r) => r.json());
+const { data } = posts.result; */
 ---
 
 <MainLayout title="Post Page">
@@ -15,5 +23,6 @@ const { value } = response;
     <h2>Chuck Norris sentence</h2>
     <p>{value}</p>
   </div>
-  <!-- <PostSection /> -->
+  <!-- {data[0].title} -->
+  <PostSection />
 </MainLayout>
