--- a/01-foundation/src/layouts/MainLayout.astro
+++ b/01-foundation/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import NavBar from "../components/NavBar.astro";
 import "../styles/global.css";
 
@@ -18,10 +19,14 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    <ViewTransitions />
   </head>
 
   <body>
     <NavBar />
-    <slot />
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
